<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D6D6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:text="Betreuer-App"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:hint="@string/e_mail" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints="Password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        style="@style/TextAppearance.AppCompat.Button"
        android:text="@string/login"

        android:textStyle="bold" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textStyle="bold" />


    <ImageView
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_below="@id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/book_foreground" />

</RelativeLayout>