<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D6D6"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/e_mail"
        android:hint="@string/name"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/e_mail"
        android:hint="@string/firstName"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstName"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/e_mail"
        android:hint="@string/e_mail"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <Spinner
            android:id="@+id/tutor_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutMode="opticalBounds"
            android:padding="10dp"
            android:spinnerMode="dropdown"
            app:cardElevation="10dp" />
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/tv_expertises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_spinner"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="Fachgebiete"
        android:textSize="20dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/selectCard"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/tv_expertises"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_select_expertises"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:hint="Wähle Fachgebiete" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_baseline_arrow_drop_down_24" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectCard"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFFFC107"
        android:text="@string/register" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_register"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFFFC107"
        android:text="Abbrechen" />


</RelativeLayout>